# DX12Test

./: App.cpp  App.h  CMakeLists.txt  ImguiManager.cpp  Timer.cpp  Window.cpp  Window.h  main.cpp
Bindable/: Bindable.h  BindableBase.h  BindableCodex.h  ConstantBuffers.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Pass.cpp  Pass.h  PiplineStateObject.cpp  PiplineStateObject.h  PointLight.cpp  PointLight.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  Topology.cpp  Topology.h  TransformCbuf.cpp  TransformCbuf.h  VertexBuffer.h
Drawable/: Box.cpp  Box.h  Drawable.cpp  Drawable.h  DrawableBase.h  SolidSphere.cpp  SolidSphere.h  Vertex.h
Drawable/Geometry/: Cube.h  Sphere.h
Graphics/: Camera.cpp  Camera.h  CommandQueue.cpp  CommandQueue.h  CommonHeaders.h  GraphicContext.h  Graphics.cpp  Graphics.h  GraphicsContext.cpp  GraphicsUtils.cpp  GraphicsUtils.h  HeapAllocation.cpp  HeapAllocation.h  Helpers.h  Projector.cpp  Projector.h  Surface.cpp  Surface.h
Shaders/: PhongPS.hlsl  PhongVS.hlsl  SolidVS.hlsl  TexturePS.hlsl  TextureVS.hlsl  VertexShader.hlsl
